--- a/src/main/resources/com/example/projekt_z_javy/lobbyNew.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/lobbyNew.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.AddingController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt_z_javy.AddingController">
    <children>
       <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -51,7 +56,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton onAction="#otherReservation" prefHeight="70.0" prefWidth="200.0" text="Button4" textFill="WHITE">
+                        <JFXButton onAction="#otherReservation" prefHeight="70.0" prefWidth="200.0" text="Informacje" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -72,13 +77,28 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <DatePicker fx:id="dataPicker" layoutX="25.0" layoutY="28.0" onAction="#getDate" />
-                  <ChoiceBox fx:id="roomChoiceBox" layoutX="25.0" layoutY="94.0" prefHeight="25.0" prefWidth="171.0" />
-                  <ChoiceBox fx:id="hourChoiceBox" layoutX="25.0" layoutY="154.0" prefHeight="25.0" prefWidth="171.0" />
-                  <Label layoutX="25.0" layoutY="6.0" text="Wybierz date rezerwacji:" />
-                  <Label layoutX="25.0" layoutY="71.0" text="Wybierz pokój do zarezerowania:" />
-                  <Label layoutX="25.0" layoutY="129.0" text="Wybierz przedział godziny do zarezerwowania:" />
-                  <Button fx:id="reservButton" layoutX="85.0" layoutY="223.0" mnemonicParsing="false" onAction="#makeReservation" text="Zarezerwuj" />
+                  <Button fx:id="reservButton" layoutX="139.0" layoutY="369.0" mnemonicParsing="false" onAction="#makeReservation" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Zarezerwuj">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <AnchorPane layoutX="50.0" layoutY="21.0" prefHeight="310.0" prefWidth="270.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="61.0" layoutY="29.0" text="Wybierz datę rezerwacji:" />
+                        <DatePicker fx:id="dataPicker" layoutX="10.0" layoutY="59.0" onAction="#getDate" prefHeight="25.0" prefWidth="250.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="425.0" layoutY="21.0" prefHeight="205.0" prefWidth="250.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="37.0" layoutY="14.0" text="Wybierz pokój do zarezerowania:" />
+                        <ChoiceBox fx:id="roomChoiceBox" layoutX="35.0" layoutY="41.0" prefHeight="25.0" prefWidth="180.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="425.0" layoutY="235.0" prefHeight="215.0" prefWidth="250.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="46.0" layoutY="14.0" text="Wybierz przedział godzinowy:" />
+                        <ChoiceBox fx:id="hourChoiceBox" layoutX="35.0" layoutY="41.0" prefHeight="25.0" prefWidth="180.0" />
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </center>
