--- a/src/main/resources/com/example/projekt_z_javy/lobbyDelete.fxml
+++ b/src/main/resources/com/example/projekt_z_javy/lobbyDelete.fxml
@@ -84,6 +84,7 @@
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></Label>
+                        <Button fx:id="iniButton" layoutX="108.0" layoutY="206.0" mnemonicParsing="false" onAction="#iniCombo" text="fillChoiceBox" />
                      </children>
                   </AnchorPane>
                   <Button fx:id="deleteButton" layoutX="142.0" layoutY="353.0" mnemonicParsing="false" onAction="#deleteReservation" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Potwierdź">
@@ -98,7 +99,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                        <TextField fx:id="textFieldRoom" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="438.0" layoutY="339.0" prefHeight="106.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
@@ -108,7 +109,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                        <TextField fx:id="textFieldHour" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="438.0" layoutY="181.0" prefHeight="106.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
@@ -118,10 +119,10 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                        <TextField fx:id="textFieldData" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
                      </children>
                   </AnchorPane>
-                  <Button fx:id="iniButton" layoutX="281.0" layoutY="327.0" mnemonicParsing="false" onAction="#iniCombo" text="Button" />
+                  <Button fx:id="wypiszButton" layoutX="326.0" layoutY="131.0" mnemonicParsing="false" onAction="#iniField" text="fillFields" />
                </children>
             </AnchorPane>
          </center>
