--- a/src/main/resources/lobbyCancelResrv.fxml
+++ b/src/main/resources/lobbyCancelResrv.fxml
@@ -3,7 +3,9 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -91,16 +93,63 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelName" layoutX="37.0" layoutY="24.0" text="Witaj">
+                  <AnchorPane layoutX="35.0" layoutY="62.0" prefHeight="274.0" prefWidth="263.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <ChoiceBox fx:id="reservationChoiceBox" layoutX="36.0" layoutY="79.0" prefHeight="26.0" prefWidth="190.0" style="-fx-background-color: #FFFFFF;" />
+                        <Label layoutX="54.0" layoutY="27.0" text="Wybierz rezerwację: ">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="140.0" layoutY="203.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="fillChoiceBox" />
+                     </children>
+                  </AnchorPane>
+                  <Button layoutX="174.0" layoutY="375.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Potwierdź">
                      <font>
-                        <Font name="System Bold Italic" size="18.0" />
-                     </font></Label>
-                  <Label layoutX="37.0" layoutY="78.0" prefHeight="124.0" prefWidth="665.0" text="Aplikacja JustBooked służy do rezerwacji pokoi. &#10;&#10;Możesz tu zarządzać pokojami (dodawać i edytować) oraz rezerwacjami (wyświetlać i usuwać). &#10;">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font size="14.0" />
                      </font>
-                  </Label>
-                  <Label layoutX="511.0" layoutY="70.0" text="CANCEL RESERVATION" />
+                  </Button>
+                  <AnchorPane layoutX="543.0" layoutY="35.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="64.0" layoutY="23.0" text="Pokój:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldRoom" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="333.0" layoutY="320.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="56.0" layoutY="25.0" text="Godziny:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldHour" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="543.0" layoutY="225.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="67.0" layoutY="24.0" text="Data:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldData" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                     </children>
+                  </AnchorPane>
+                  <Button layoutX="379.0" layoutY="62.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="fillFields" />
+                  <AnchorPane layoutX="333.0" layoutY="130.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="44.0" layoutY="23.0" text="Użytkownik:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldRoom1" disable="true" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" />
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </center>
