--- a/src/main/resources/lobbyShowReserv.fxml
+++ b/src/main/resources/lobbyShowReserv.fxml
@@ -4,6 +4,8 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -91,16 +93,16 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelName" layoutX="37.0" layoutY="24.0" text="Witaj">
-                     <font>
-                        <Font name="System Bold Italic" size="18.0" />
-                     </font></Label>
-                  <Label layoutX="37.0" layoutY="78.0" prefHeight="124.0" prefWidth="665.0" text="Aplikacja JustBooked służy do rezerwacji pokoi. &#10;&#10;Możesz tu zarządzać pokojami (dodawać i edytować) oraz rezerwacjami (wyświetlać i usuwać). &#10;">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="494.0" layoutY="70.0" text="SHOW RESERVATION" />
+                  <Button layoutX="308.0" layoutY="336.0" mnemonicParsing="false" text="Odswiez tabelke" />
+                  <TableView layoutX="109.0" layoutY="108.0" prefHeight="200.0" prefWidth="500.0">
+                     <columns>
+                        <TableColumn fx:id="idCol" prefWidth="100.0" text="ID" />
+                        <TableColumn fx:id="idPok" prefWidth="100.0" text="POKOJ" />
+                        <TableColumn fx:id="idUs" prefWidth="100.0" text="UZYTKOWNIK" />
+                        <TableColumn fx:id="idGodz" prefWidth="100.0" text="GODZINY" />
+                        <TableColumn fx:id="dateCol" prefWidth="100.0" text="DATA" />
+                     </columns>
+                  </TableView>
                </children>
             </AnchorPane>
          </center>
