--- a/src/main/resources/lobbyContactAdmin.fxml
+++ b/src/main/resources/lobbyContactAdmin.fxml
@@ -91,16 +91,35 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelName" layoutX="37.0" layoutY="24.0" text="Witaj">
+                  <Label layoutX="530.0" layoutY="301.0" text="Autorzy:">
                      <font>
-                        <Font name="System Bold Italic" size="18.0" />
-                     </font></Label>
-                  <Label layoutX="37.0" layoutY="78.0" prefHeight="124.0" prefWidth="665.0" text="Aplikacja JustBooked służy do rezerwacji pokoi. &#10;&#10;Możesz tu zarządzać pokojami (dodawać i edytować) oraz rezerwacjami (wyświetlać i usuwać). &#10;">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
+                        <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="485.0" layoutY="70.0" text="ADMIN CONTCT" />
+                  <Label layoutX="561.0" layoutY="337.0" text="Kacper Filipiuk &#10;Aneta Pietrzak">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIcon glyphName="USER" layoutX="530.0" layoutY="355.0" selectionFill="BLACK" text="" textAlignment="CENTER" wrappingWidth="17.428525924682617">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </FontAwesomeIcon>
+                  <FontAwesomeIcon glyphName="USER" layoutX="530.0" layoutY="382.0" selectionFill="BLACK" text="" textAlignment="CENTER" wrappingWidth="17.428525924682617">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </FontAwesomeIcon>
+                  <AnchorPane layoutX="37.0" layoutY="49.0" prefHeight="173.0" prefWidth="460.0" style="-fx-background-color: #D0D0D0; -fx-background-radius: 10 10 10 10;">
+                     <children>
+                        <Label layoutX="34.0" layoutY="14.0" text="Wiadomości od użytkowników:">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </center>
